samples/_failures_safe/1761499409_855bad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac439d8b.c: In function ‘parse_input’:
./samples/SAFE/__tmp_ac439d8b.c:169:23: error: expected ‘;’ at end of input
  169 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_ac439d8b.c:169:17: error: expected declaration or statement at end of input
  169 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_ac439d8b.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac439d8b.c:169:17: error: expected declaration or statement at end of input
